@@ -10,3 +10,15 @@ endif
 
 source ${MGICONFIG}/master.config.csh
 
+setenv DB_TYPE sybase
+
+if ( ${DB_TYPE} == 'postgres' ) then
+
+setenv NOTELOAD_CMD "-S${PG_DBSERVER} -D${PG_DBNAME} -U${PG_DBUSER} -P${PG_1LINE_PASSFILE}"
+
+else
+
+setenv NOTELOAD_CMD "-S${MGD_DBSERVER} -D${MGD_DBNAME} -U${MGD_DBUSER} -P${MGD_DBPASSWORDFILE}"
+
+endif
+
