@@ -17,7 +17,7 @@ touch ${NOTELOG}
 
 date >> ${NOTELOG}
 
-${NOTELOAD}/mginoteload.py -S${MGD_DBSERVER} -D${MGD_DBNAME} -U${MGI_DBUSER} -P${MGI_DBPASSWORDFILE} -I${NOTEINPUTFILE} -M${NOTEMODE} -O${NOTEOBJECTTYPE} -T"${NOTETYPE}"
+${NOTELOAD}/mginoteload.py ${NOTELOAD_CMD} -I${NOTEINPUTFILE} -M${NOTEMODE} -O${NOTEOBJECTTYPE} -T"${NOTETYPE}"
 
 date >> ${NOTELOG}
 
